- 클라이언트 등록에서 유효성 검증 추가