@@ -1,8 +1,6 @@
 package io.github.syakuis.identity.core.web;
 
-import java.util.stream.Collectors;
 import javax.validation.ConstraintViolationException;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,20 +13,15 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
  * @author Seok Kyun. Choi.
  * @since 2021-08-31
  */
-@Slf4j
 @ControllerAdvice
-public class IdentityResponseEntityExceptionHandler extends ResponseEntityExceptionHandler {
+public class GlobalResponseEntityExceptionHandler extends ResponseEntityExceptionHandler {
     @ExceptionHandler(value = IllegalArgumentException.class)
     protected ResponseEntity<Object> handleConstraintViolation(IllegalArgumentException e, WebRequest request) {
-        log.trace(e.getLocalizedMessage(), e);
-
-        return handleExceptionInternal(e, new ErrorResponsePayload(HttpStatus.BAD_REQUEST, e.getLocalizedMessage()).wrapper(), new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
+        return handleExceptionInternal(e, new ErrorResponsePayload(HttpStatus.BAD_REQUEST, e.getLocalizedMessage()), new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
     }
-
+    // todo 유효성 검증 공통 구현
     @ExceptionHandler(value = ConstraintViolationException.class)
     protected ResponseEntity<Object> handleConstraintViolation(ConstraintViolationException e, WebRequest request) {
-        log.trace(e.getLocalizedMessage(), e);
-
         ValidationErrorResponsePayload payload = ValidationErrorResponsePayload.builder()
             .message(DefaultResultStatus.INVALID_ARGUMENT.message())
             .status(DefaultResultStatus.INVALID_ARGUMENT.name())
@@ -37,9 +30,9 @@ public class IdentityResponseEntityExceptionHandler extends ResponseEntityExcept
                     .target(v.getPropertyPath().toString())
                     .message(v.getMessage())
                     .code(v.getMessageTemplate())
-                    .build()).collect(Collectors.toList()))
+                    .build()).toList())
             .build();
 
-        return handleExceptionInternal(e, payload.wrapper(), new HttpHeaders(), DefaultResultStatus.INVALID_ARGUMENT.httpStatus(), request);
+        return handleExceptionInternal(e, payload, new HttpHeaders(), DefaultResultStatus.INVALID_ARGUMENT.httpStatus(), request);
     }
 }
